--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title><%= content_for :page_title %> Great companies that pay fair amount of money to their interns</title>
     <%= csrf_meta_tags %>
 
+    <%= favicon_link_tag 'payinterns_amsterdam_favicon.png', type: 'image/png' %>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
