implemented question mark

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -150,7 +150,7 @@ a:hover {
 	right: 30px;
 	color: var(--main-color);
 	cursor: pointer;
-	border-radius: 200px;
+	border-radius: 50%;
 	border: 2px solid var(--main-color);
 	z-index: 5;
 
@@ -170,6 +170,7 @@ a:hover {
 }
 
 .popup {
+	display: none;
 	position: fixed;
 	width: 100%;
 	height: 100%;
@@ -182,19 +183,24 @@ a:hover {
 	opacity: 0.8;
 	z-index: 2;
 }
-.popup_inner {
-	padding: 20px 30vw 20px 20px;
-	max-width: 700px;
-	position: fixed;
-	border: 2px solid var(--main-color);
-	z-index: 3;
-	left: 60px;
-	right: 60px;
-	top: 60px;
-	bottom: 60px;
-	margin: auto;
-	background: var(--background-color);
-	overflow: scroll;
+// .popup_inner {
+// 	display: none;
+// 	padding: 20px 30vw 20px 20px;
+// 	max-width: 700px;
+// 	position: fixed;
+// 	border: 2px solid var(--main-color);
+// 	z-index: 3;
+// 	left: 60px;
+// 	right: 60px;
+// 	top: 60px;
+// 	bottom: 60px;
+// 	margin: auto;
+// 	background: var(--background-color);
+// 	overflow: scroll;
+// }
+
+.on-screen {
+	display: block;
 }
 
 ul {
