--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,42 @@
   <head>
     <title><%= content_for :page_title %> Great companies that pay fair amount of money to their interns</title>
     <%= csrf_meta_tags %>
-
     <%= favicon_link_tag 'payinterns_amsterdam_favicon.png', type: 'image/png' %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <main>
         <%= yield %>
     </main>
+
+    <div id="questions">?</div>
+
+    <!-- Pop-up -->
+    <div class="popup">
+    </div>
+
+      <!-- <div class='popup_inner'>
+        <ul>
+          <li>
+            <label>Who made this, and why?</label>
+            <p>I'm <a href="http://barronwebster.com" target="blank">Barron</a>. I made this to help anyone find an internship that they can afford to take in NYC. Internships are arguably the best way to get a foot in the door in the creative industry, but living in the Big Apple ain't cheap.</p>
+          </li>
+          <li>
+            <label>How was this data gathered?</label>
+            <p>All the places are on this list were submitted by people who claim to work there or have worked there. It's not scientific or perfect, but it's worked so far. If any of the places are listed incorrectly, contact me!</p>
+          </li>
+          <li>
+            <label>Why $13.65?</label>
+            <p>$13.65 is the current living wage for NYC, according to <a href="https://www1.nyc.gov/site/dca/about/living-wage-law.page">NYC Consumer Affairs. This number is ajdusted yearly — it went from $13.40 to $13.65 recently.</a></p>
+          </li>
+          <li>
+            <label>I know/am an employer who fits this description. <br/>Can you include them/me?</label>
+            <p>Yes! Use <a href="https://goo.gl/forms/lsFeerKQxjRvwQMt1">this form</a> to submit.</p>
+          </li>
+        </ul>
+      </div> -->
+    </div>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'false' %>
   </body>
 </html>
