--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -17,11 +17,13 @@
       <%= link_to company.company_name, "http://#{company.company_url}", :target => "_blank", class: "listItem" %>
     <% end %>
   </section>
-
+</div>
 
 <div id="outro">
   <h1>
     Know a place that belongs on this list? Submit it <%= link_to "here", new_company_path %>
   </h1>
-</div>
+  <p>
+    <a href="http://payinterns.nyc" target="_blank">Paid internships in NYC?</a>
+  </p>
 </div>
