--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,30 +14,31 @@
 
     <div id="questions">?</div>
 
-    <!-- Pop-up -->
-    <div class="popup">
-    </div>
+      <!-- Pop-up -->
+      <div class="popup">
+        <div class='popup_inner'>
+          <ul>
+            <li>
+              <label>Who made this, and why?</label>
+              <p>It's <a href="http://barronwebster.com" target="blank">Barron</a> and <a href="http://peterjavorkai.com" target="blank">Peter</a> here. We made this to help anyone find an internship that they can afford to take in Amsterdam. Internships are arguably the best way to get a foot in the door in the creative industry, but living within the canals ain't cheap.</p>
+            </li>
+            <li>
+              <label>How was this data gathered?</label>
+              <p>All the places are on this list were submitted by people who claim to work there or have worked there. It's not scientific or perfect, but it's worked so far. If any of the places are listed incorrectly, contact us!</p>
+            </li>
+            <li>
+              <label>Why €1578/month?</label>
+              <p>€1578 is the current living wage / month for Amsterdam, according to <a href="https://www.government.nl/topics/minimum-wage/amount-of-the-minimum-wage">Dutch government and the municipality of Amsterdam. This number is ajdusted yearly — it went from €1565 to €1578 recently.</a> We strongly believe that, there shouldn't be an age differentiation either.</p>
+            </li>
+            <li>
+              <label>I know/am an employer who fits this description. <br/>Can you include them/me?</label>
+              <p>Yes! Use <%= link_to "this form", new_company_path %> to submit.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
 
-      <!-- <div class='popup_inner'>
-        <ul>
-          <li>
-            <label>Who made this, and why?</label>
-            <p>I'm <a href="http://barronwebster.com" target="blank">Barron</a>. I made this to help anyone find an internship that they can afford to take in NYC. Internships are arguably the best way to get a foot in the door in the creative industry, but living in the Big Apple ain't cheap.</p>
-          </li>
-          <li>
-            <label>How was this data gathered?</label>
-            <p>All the places are on this list were submitted by people who claim to work there or have worked there. It's not scientific or perfect, but it's worked so far. If any of the places are listed incorrectly, contact me!</p>
-          </li>
-          <li>
-            <label>Why $13.65?</label>
-            <p>$13.65 is the current living wage for NYC, according to <a href="https://www1.nyc.gov/site/dca/about/living-wage-law.page">NYC Consumer Affairs. This number is ajdusted yearly — it went from $13.40 to $13.65 recently.</a></p>
-          </li>
-          <li>
-            <label>I know/am an employer who fits this description. <br/>Can you include them/me?</label>
-            <p>Yes! Use <a href="https://goo.gl/forms/lsFeerKQxjRvwQMt1">this form</a> to submit.</p>
-          </li>
-        </ul>
-      </div> -->
+
     </div>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'false' %>
   </body>
