--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- META -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <title><%= content_for :page_title %> Great companies that pay fair amount of money to their interns</title>
+
+    <!-- STOCK RAILS -->
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'payinterns_amsterdam_favicon.png', type: 'image/png' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
