Added basic meta

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <!-- META -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Find creative internships that pay above the living wage in NYC.">
+    <meta name="keywords" content="Amsterdam, Design, Internships, Paid Internships, traineeship, trainees, creative, agency">
+    <meta name="author" content="Peter Javorkai">
+
 
     <title><%= content_for :page_title %> Great companies that pay fair amount of money to their interns</title>
 
