--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
     <meta name="keywords" content="Amsterdam, Design, Internships, Paid Internships, traineeship, trainees, creative, agency">
     <meta name="author" content="Peter Javorkai">
 
+    <meta property="og:url"           content="http://payinterns.amsterdam" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="Amsterdam Paid Creative Internships" />
+    <meta property="og:description"   content="Find creative internships that pay above the living wage in Amsterdam." />
+    <meta property="og:image"         content="<%= image_url('social_payinterns_amsterdam.png') %>">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@javpet">
+    <meta name="twitter:creator" content="@wjavpet">
+    <meta name="twitter:title" content="Amsterdam Paid Creative Internships">
+    <meta name="twitter:description" content="Find creative internships that pay above the living wage in Amsterdam.">
+    <meta name="twitter:image" content="<%= image_url('social_payinterns_amsterdam.png') %>">
+
 
     <title><%= content_for :page_title %> Great companies that pay fair amount of money to their interns</title>
 
