Fix social image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- META -->
+    <!-- META TAGS-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Find creative internships that pay above the living wage in NYC.">
-    <meta name="keywords" content="Amsterdam, Design, Internships, Paid Internships, traineeship, trainees, creative, agency">
+    <meta name="keywords" content="Amsterdam, Design, Internships, Paid Internships, traineeship, trainees, creative, agency, company">
     <meta name="author" content="Peter Javorkai">
 
     <meta property="og:url"           content="http://payinterns.amsterdam" />
