--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -87,6 +87,10 @@ input:focus {
 
 /*list items*/
 
+.CompanyList {
+	margin-top: 2rem;
+}
+
 .listItem {
 	text-align: left;
 	/*background: #f5f5f5;*/
