Google analytics added

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -1,7 +1,7 @@
 :root {
-	--main-color: #ff001a;
+	--main-color: #fff;
 	--highlighter-color: #d6517a;
-	--background-color: #000;
+	--background-color: #fc5b00;
 	--error-color: rgba(255, 255, 255, 0.4);
 }
 
