--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,39 @@
 
       gtag('config', 'UA-117276143-1');
     </script>
+
+    <!-- Twitter -->
+    <script async>
+      window.twttr = (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0],
+          t = window.twttr || {};
+        if (d.getElementById(id)) return t;
+        js = d.createElement(s);
+        js.id = id;
+        js.src = "https://platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js, fjs);
+
+        t._e = [];
+        t.ready = function(f) {
+          t._e.push(f);
+        };
+
+        return t;
+      }(document, "script", "twitter-wjs"));
+    </script>
+
+    <!-- Facebook  -->
+    <div id="fb-root"></div>
+    <script>
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.12&appId=170343396836980';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
   </head>
 
   <body>
@@ -71,8 +104,10 @@
         </div>
       </div>
 
+      <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=A list of Amsterdam offices that pay their creative interns more than the Amsterdam minimum wage:">Tweet</a>
 
-    </div>
+      <div class="fb-share-button" data-href="https://payinterns.amsterdam" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpayinterns.amsterdam%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'false' %>
   </body>
 </html>
