--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Amsterdam Paid Creative Internships" />
     <meta property="og:description"   content="Find creative internships that pay above the living wage in Amsterdam." />
-    <meta property="og:image"         content="<%= image_url('social_payinterns_amsterdam.png') %>">
+    <meta property="og:image"         content="<%= image_url('social_payinterns_amsterdam.png') %>" />
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@javpet">
@@ -103,11 +103,6 @@
           </ul>
         </div>
       </div>
-
-      <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=A list of Amsterdam offices that pay their creative interns more than the Amsterdam minimum wage:">Tweet</a>
-
-      <div class="fb-share-button" data-href="https://payinterns.amsterdam" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpayinterns.amsterdam%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
-
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'false' %>
   </body>
 </html>
