--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -29,7 +29,9 @@
   <h1>
     Know a place that belongs on this list? Submit it <%= link_to "here", new_company_path %>
   </h1>
-  <p>
-    <a href="http://payinterns.nyc" target="_blank">Paid internships in NYC?</a>
-  </p>
+  <a href="http://payinterns.nyc" target="_blank">Paid internships in NYC?</a>
 </div>
+
+<a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=A list of Amsterdam offices that pay their creative interns more than the Amsterdam minimum wage:">Tweet</a>
+
+<div class="fb-share-button" data-href="https://payinterns.amsterdam" data-layout="button" data-size="large">Share</div>
