Social class added

--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -250,12 +250,13 @@ p {
 	padding-top: 50px;
 }
 
+.social {
+	margin-top: 25px;
+}
+
 .fb_iframe_widget {
 	display: inline-flex !important;
 	padding-right: 10px;
-}
-
-.twitter-share-button {
 }
 
 /*small screeeeeens*/
