--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -32,6 +32,7 @@
   <a href="http://payinterns.nyc" target="_blank">Paid internships in NYC?</a>
 </div>
 
-<a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=A list of Amsterdam offices that pay their creative interns more than the Amsterdam minimum wage:">Tweet</a>
-
-<div class="fb-share-button" data-href="https://payinterns.amsterdam" data-layout="button" data-size="large">Share</div>
+<div class="social">
+  <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=A list of Amsterdam offices that pay their creative interns more than the Amsterdam minimum wage:">Tweet</a>
+  <div class="fb-share-button" data-href="https://payinterns.amsterdam" data-layout="button" data-size="large">Share</div>
+</div>
