--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <!-- META TAGS-->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Find creative internships that pay above the living wage in NYC.">
+    <meta name="description" content="Find creative internships that pay above the living wage in Amsterdam.">
     <meta name="keywords" content="Amsterdam, Design, Internships, Paid Internships, traineeship, trainees, creative, agency, company">
     <meta name="author" content="Peter Javorkai">
 
@@ -93,8 +93,8 @@
               <p>All the places are on this list were submitted by people who claim to work there or have worked there. It's not scientific or perfect, but it's worked so far. If any of the places are listed incorrectly, contact us!</p>
             </li>
             <li>
-              <label>Why €1578/month?</label>
-              <p>€1578 is the current living wage / month for Amsterdam, according to <a href="https://www.government.nl/topics/minimum-wage/amount-of-the-minimum-wage">Dutch government and the municipality of Amsterdam. This number is ajdusted yearly — it went from €1565 to €1578 recently.</a> We strongly believe that, there shouldn't be an age differentiation either.</p>
+              <label>Why at least €749/month?</label>
+              <p>€749 is the current minimum living wage / month for anyone at the age 18 in Amsterdam, according to <a href="https://www.government.nl/topics/minimum-wage/amount-of-the-minimum-wage">Dutch government and the local  municipality. This number is adjusted yearly — it went from €743 to €749 recently.</a> We would like to highlight the goal is not the minimum here, and also age should be taken into consideration calculating the monthly wages.</p>
             </li>
             <li>
               <label>I know/am an employer who fits this description. <br/>Can you include them/me?</label>
