--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -273,11 +273,19 @@ p {
 	html {
 		font-size: 60%;
 	}
+}
+
+@media (hover: none), (hover: on-demand) {
+	#questions {
+		background-color: var(--background-color);
+		color: var(--main-color);
+		border: 2px solid var(--main-color);
+	}
 
 	#questions:hover {
 		transform: rotate(0deg);
-		background-color: var(--main-color);
-		color: var(--background-color);
-		transition: transform 0.3s ease, box-shadow 0.3s ease, color 0.3s ease, background-color 0.3s ease;
+		background-color: var(--background-color);
+		color: var(--main-color);
+		border: 2px solid var(--main-color);
 	}
 }
