--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -20,7 +20,7 @@
 
   <section class="CompanyList">
     <% @companies.each do |company| %>
-      <%= link_to company.company_name, "http://#{company.company_url}", :target => "_blank", class: "listItem" %>
+      <%= link_to company.company_name, company.company_url, :target => "_blank", class: "listItem" %>
     <% end %>
   </section>
 </div>
