--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -12,11 +12,11 @@
   <% end %>
 
   <%= simple_form_for @company do |f| %>
-    <%= f.input :company_name, placeholder: 'coolcompany@domain.com' %>
+    <%= f.input :company_name, placeholder: 'coolcompany' %>
     <%= f.input :company_url, placeholder: 'coolcompany.com' %>
     <%= f.input :intern_payment, label: "The gross amount paid to intern / month in €", input_html: { min: 749 }, placeholder: "749", hint: "€749 is the minimum livable wage we can accept" %>
-    <%= f.input :sender_name, placeholder: 'cool name' %>
-    <%= f.input :sender_email, placeholder: 'coolperson@domain.com', hint: "We might contact you for additional details, no spam!" %>
+    <!-- <%= f.input :sender_name, placeholder: 'cool name' %>
+    <%= f.input :sender_email, placeholder: 'coolperson@domain.com', hint: "We might contact you for additional details, no spam!" %> -->
     <%= f.button :submit, "Add company" %>
   <% end %>
 
